# coolfindpattern

./: .gitignore  Cargo.toml  README.md
benches/: pattern.rs
src/: lib.rs
