[package]
name    = "coolfindpattern"
version = "0.1.0"
authors = ["unknowntrojan"]
edition = "2021"

[[bench]]
name = "find_pattern"
path = "benches/pattern.rs"

[profile.bench]
debug           = true
opt-level       = 3
overflow-checks = false
lto             = "fat"

[dev-dependencies]
rand = "*"

[dependencies]
