[package]
name         = "coolfindpattern"
description  = "SIMD-accelerated pattern scanning library"
authors      = ["unknowntrojan"]
version      = "0.1.3"
license-file = "LICENSE"
repository   = "https://github.com/unknowntrojan/coolfindpattern"
edition      = "2021"

[[bench]]
name = "find_pattern"
path = "benches/pattern.rs"

[profile.bench]
opt-level       = "s"
debug           = true
overflow-checks = false
lto             = "fat"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
